<resources>
    <string name="app_name">Time Table</string>
    <string name="days_menu">Select Day</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="lecture_number">Lecture Number</string>
    <string name="timings">Timings</string>
    <string name="lecture">Subject</string>
    <string name="lecture_number_hint">1</string>
    <string name="timings_hint">Enter Timings</string>
    <string name="lecture_hint">Enter Lecture Subject</string>
    <string name="delete">Delete</string>
</resources>
