<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_gradient"
    >
<LinearLayout
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/lecture_number"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lecture_number_hint"
        android:id="@+id/lec_number"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:singleLine="true"
        android:textSize="30sp"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#FFFFFF"
    android:textSize="20sp"
    android:text="@string/timings"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timings_hint"
        android:id="@+id/lec_time"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:singleLine="true"
        android:textSize="30sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/lecture"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lecture_hint"
        android:id="@+id/lec_title"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:singleLine="true"
        android:textSize="30sp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/lec_add"
        android:layout_gravity="center"
        />
</LinearLayout>
</ScrollView>